@@ -13,6 +13,8 @@
  *******************************************************************************/
 package org.eclipse.jdt.core.tests.dom;
 
+import static org.junit.Assert.assertNotEquals;
+
 import java.util.ArrayList;
 import java.util.List;
 
@@ -54,29 +56,27 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 		super.setUpSuite();
 		this.ast = AST.newAST(getASTLatest(), false);
 		this.currentProject = getJavaProject("Converter_19");
-		if (this.ast.apiLevel() == AST.JLS20) {
-			this.currentProject.setOption(JavaCore.COMPILER_COMPLIANCE, JavaCore.VERSION_20);
-			this.currentProject.setOption(JavaCore.COMPILER_SOURCE, JavaCore.VERSION_20);
-			this.currentProject.setOption(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, JavaCore.VERSION_20);
-			this.currentProject.setOption(JavaCore.COMPILER_PB_ENABLE_PREVIEW_FEATURES, JavaCore.ENABLED);
-			this.currentProject.setOption(JavaCore.COMPILER_PB_REPORT_PREVIEW_FEATURES, JavaCore.IGNORE);
+		if (this.ast.apiLevel() == AST.JLS21) {
+			this.currentProject.setOption(JavaCore.COMPILER_COMPLIANCE, JavaCore.VERSION_21);
+			this.currentProject.setOption(JavaCore.COMPILER_SOURCE, JavaCore.VERSION_21);
+			this.currentProject.setOption(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, JavaCore.VERSION_21);
 		}
 	}
 	protected void disablePreview() {
 		this.currentProject = getJavaProject("Converter_19");
-		if (this.ast.apiLevel() == AST.JLS20) {
-			this.currentProject.setOption(JavaCore.COMPILER_COMPLIANCE, JavaCore.VERSION_20);
-			this.currentProject.setOption(JavaCore.COMPILER_SOURCE, JavaCore.VERSION_20);
-			this.currentProject.setOption(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, JavaCore.VERSION_20);
+		if (this.ast.apiLevel() == AST.JLS21) {
+			this.currentProject.setOption(JavaCore.COMPILER_COMPLIANCE, JavaCore.VERSION_21);
+			this.currentProject.setOption(JavaCore.COMPILER_SOURCE, JavaCore.VERSION_21);
+			this.currentProject.setOption(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, JavaCore.VERSION_21);
 			this.currentProject.setOption(JavaCore.COMPILER_PB_ENABLE_PREVIEW_FEATURES, JavaCore.DISABLED);
 		}
 	}
 	protected void enabledPreview() {
 		this.currentProject = getJavaProject("Converter_19");
-		if (this.ast.apiLevel() == AST.JLS20) {
-			this.currentProject.setOption(JavaCore.COMPILER_COMPLIANCE, JavaCore.VERSION_20);
-			this.currentProject.setOption(JavaCore.COMPILER_SOURCE, JavaCore.VERSION_20);
-			this.currentProject.setOption(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, JavaCore.VERSION_20);
+		if (this.ast.apiLevel() == AST.JLS21) {
+			this.currentProject.setOption(JavaCore.COMPILER_COMPLIANCE, JavaCore.VERSION_21);
+			this.currentProject.setOption(JavaCore.COMPILER_SOURCE, JavaCore.VERSION_21);
+			this.currentProject.setOption(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, JavaCore.VERSION_21);
 			this.currentProject.setOption(JavaCore.COMPILER_PB_ENABLE_PREVIEW_FEATURES, JavaCore.ENABLED);
 			this.currentProject.setOption(JavaCore.COMPILER_PB_REPORT_PREVIEW_FEATURES, JavaCore.IGNORE);
 		}
@@ -102,12 +102,12 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 	}
 
 	private void printJREError() {
-		System.err.println("Test "+getName()+" requires a JRE 20");
+		System.err.println("Test "+getName()+" requires a JRE 21");
 	}
 
 	@SuppressWarnings("rawtypes")
 	public void testTypePattern() throws CoreException {
-		if (!isJRE20) {
+		if (!isJRE21) {
 			printJREError();
 			return;
 		}
@@ -155,7 +155,7 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 
 	@SuppressWarnings("rawtypes")
 	public void testGuardedPattern() throws CoreException {
-		if (!isJRE20) {
+		if (!isJRE21) {
 			printJREError();
 			return;
 		}
@@ -182,7 +182,7 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 		assertEquals("incorrect no of statements", 6, statements.size());
 		SwitchCase caseInteger = (SwitchCase) statements.get(0);
 		Expression guardedPattern = (Expression)caseInteger.expressions().get(0);
-		assertEquals("Guarded Pattern", guardedPattern.getNodeType(), ASTNode.GUARDED_PATTERN);
+		assertEquals("Guarded Pattern", ASTNode.GUARDED_PATTERN, guardedPattern.getNodeType());
 		Pattern pattern = ((GuardedPattern)guardedPattern).getPattern();
 		SingleVariableDeclaration patternVariable = ((TypePattern)pattern).getPatternVariable();
 		assertEquals("Type Pattern Integer", "Integer", patternVariable.getType().toString());
@@ -210,49 +210,8 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 	}
 
 	@SuppressWarnings("rawtypes")
-	public void testParenthesizedExpressionPattern() throws CoreException {
-		if (!isJRE20) {
-			printJREError();
-			return;
-		}
-		String contents = "public class X {\n" +
-				"void foo(Object o) {\n" +
-				"	switch (o) {\n" +
-			    "		case (Integer i)  : System.out.println(i.toString());\n" +
-			    "		default       	  : System.out.println(o.toString());\n" +
-			    "	}\n" +
-			    "}\n" +
-				"\n" +
-				"}\n";
-		this.workingCopy = getWorkingCopy("/Converter_19/src/X.java", true/*resolve*/);
-		ASTNode node = buildAST(
-			contents,
-			this.workingCopy);
-		assertEquals("Not a compilation unit", ASTNode.COMPILATION_UNIT, node.getNodeType());
-		CompilationUnit compilationUnit = (CompilationUnit) node;
-		assertProblemsSize(compilationUnit, 0);
-		node = getASTNode(compilationUnit, 0, 0, 0);
-		assertEquals("Switch statement", node.getNodeType(), ASTNode.SWITCH_STATEMENT);
-		List statements = ((SwitchStatement)node).statements();
-		assertEquals("incorrect no of statements", 4, statements.size());
-		SwitchCase caseInteger = (SwitchCase) statements.get(0);
-		Expression parenthesizedExpression = (Expression)caseInteger.expressions().get(0);
-		assertEquals("Parenthesized Expression", parenthesizedExpression.getNodeType(), ASTNode.PARENTHESIZED_EXPRESSION);
-		Expression targetPattern = ((ParenthesizedExpression)parenthesizedExpression).getExpression();
-		assertEquals("Type Pattern", targetPattern.getNodeType(), ASTNode.TYPE_PATTERN);
-		SingleVariableDeclaration patternVariable = ((TypePattern)targetPattern).getPatternVariable();
-		assertEquals("Type Pattern Integer", "Integer", patternVariable.getType().toString());
-		SingleVariableDeclaration patternVariable2 = ((TypePattern)targetPattern).patternVariables().get(0);
-		assertEquals(patternVariable, patternVariable2);
-
-		SwitchCase caseDefault = (SwitchCase) statements.get(2);
-		assertTrue("Default case", caseDefault.isDefault());
-
-	}
-
-	@SuppressWarnings("rawtypes")
 	public void testNullPattern() throws CoreException {
-		if (!isJRE20) {
+		if (!isJRE21) {
 			printJREError();
 			return;
 		}
@@ -285,7 +244,7 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 
 	@SuppressWarnings("rawtypes")
 	public void testCaseDefaultExpressionPattern() throws CoreException {
-		if (!isJRE20) {
+		if (!isJRE21) {
 			printJREError();
 			return;
 		}
@@ -317,14 +276,14 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 	}
 
 	public void testBug575250() throws CoreException {
-		if (!isJRE20) {
-			System.err.println("Test "+getName()+" requires a JRE 20");
+		if (!isJRE21) {
+			System.err.println("Test "+getName()+" requires a JRE 21");
 			return;
 		}
 		String contents = "public class X {\n" +
 				"  static void foo(Object o) {\n" +
 				"    switch (o) {\n" +
-				"      case (Integer i_1): System.out.println(\"Integer\");\n" +
+				"      case Integer i_1: System.out.println(\"Integer\");\n" +
 				"      default: System.out.println(\"Object\");" +
 				"    }\n" +
 				"  }\n" +
@@ -371,14 +330,14 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 	}
 
 	public void testRecordPattern001() throws CoreException {
-		if (!isJRE20) {
+		if (!isJRE21) {
 			printJREError();
 			return;
 		}
 		String contents = "public class X {\n"
 						+ "  static void print(Rectangle r) {\n"
-						+ "    if (r instanceof (Rectangle(ColoredPoint(Point(int x, int y), Color c),\n"
-						+ "                               ColoredPoint lr))) {\n"
+						+ "    if (r instanceof Rectangle(ColoredPoint(Point(int x, int y), Color c),\n"
+						+ "                               ColoredPoint lr)) {\n"
 						+ "        System.out.println(\"Upper-left corner: \");\n"
 						+ "        System.out.println(lr.toString());\n"
 						+ "    }\n"
@@ -414,13 +373,11 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 		assertNotNull("Pattern should not be null", pattern);
 		assertEquals("Should be a record pattern", "org.eclipse.jdt.core.dom.RecordPattern", pattern.getClass().getName());
 		RecordPattern recPattern = (RecordPattern) pattern;
-		assertNull("Pattern name should be null", recPattern.getPatternName());
 		List<Pattern> patterns = recPattern.patterns();
 		assertEquals("Incorrect nested pattern size", 2, patterns.size());
 		pattern = patterns.get(0);
 		assertEquals("Should be a type pattern", "org.eclipse.jdt.core.dom.RecordPattern", pattern.getClass().getName());
 		recPattern = (RecordPattern) pattern;
-		assertNull("Pattern name should be null", recPattern.getPatternName());
 		pattern = patterns.get(1);
 		assertEquals("Should be a type pattern", "org.eclipse.jdt.core.dom.TypePattern", pattern.getClass().getName());
 		TypePattern tPattern = (TypePattern) pattern;
@@ -430,8 +387,8 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 
 	@SuppressWarnings("rawtypes")
 	public void testRecordPattern002() throws CoreException {
-		if (!isJRE20) {
-			System.err.println("Test "+getName()+" requires a JRE 20");
+		if (!isJRE21) {
+			System.err.println("Test "+getName()+" requires a JRE 21");
 			return;
 		}
 		String contents =  "public class X {\n"
@@ -482,14 +439,13 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 		assertEquals("Type of RecordPattern variable is not Record","Record" , recordPattern.getPatternType().toString());
 		assertEquals("StartPosition of Type variable is not 94",94 , recordPattern.getPatternType().getStartPosition());
 		assertEquals("Length of Record Pattern is not 6",6 , recordPattern.getPatternType().getLength());
-		assertNull("Name of RecordPattern variableis not null", recordPattern.getPatternName());
 		assertEquals("Type of Nested pattern in RecordPattern is not TypePattern",ASTNode.TYPE_PATTERN , recordPattern.patterns().get(0).getNodeType());
 	}
 
 	@SuppressWarnings("rawtypes")
 	public void testRecordPattern003() throws CoreException {
-		if (!isJRE20) {
-			System.err.println("Test "+getName()+" requires a JRE 20");
+		if (!isJRE21) {
+			System.err.println("Test "+getName()+" requires a JRE 21");
 			return;
 		}
 		String contents =  "public class X {\n"
@@ -542,19 +498,16 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 		assertEquals("incorrect type", ASTNode.RECORD_PATTERN, ((Expression)caseStmt.expressions().get(0)).getNodeType());
 		RecordPattern recordPattern = (RecordPattern)caseStmt.expressions().get(0);
 		assertEquals("Type of RecordPattern variable is not Rectangle","Rectangle" , recordPattern.getPatternType().toString());
-		assertNull("Name of RecordPattern variable is not null", recordPattern.getPatternName());
 		assertEquals("There should be 2 nested Patterns in Rectangle", 2 , recordPattern.patterns().size());
 		assertEquals("Type of Nested pattern in Rectangle is not RecordPattern",ASTNode.RECORD_PATTERN , recordPattern.patterns().get(0).getNodeType());
 		assertEquals("Type of Nested pattern in Rectangle is not TypePattern",ASTNode.TYPE_PATTERN , recordPattern.patterns().get(1).getNodeType());
 		RecordPattern recordPattern1 = (RecordPattern)recordPattern.patterns().get(0);
 		assertEquals("Type of RecordPattern variable is not ColoredPoint","ColoredPoint" , recordPattern1.getPatternType().toString());
-		assertEquals("Name of RecordPattern variable is not null", null , recordPattern1.getPatternName());
 		assertEquals("There should be 2 nested Patterns in ColoredPoint", 2 , recordPattern1.patterns().size());
 		assertEquals("Type of Nested pattern in ColoredPoint is not RecordPattern",ASTNode.RECORD_PATTERN , recordPattern1.patterns().get(0).getNodeType());
 		assertEquals("Type of Nested pattern in ColoredPoint is not TypePattern",ASTNode.TYPE_PATTERN , recordPattern1.patterns().get(1).getNodeType());
 		RecordPattern recordPattern2 = (RecordPattern)recordPattern1.patterns().get(0);
 		assertEquals("Type of RecordPattern variable is not Point","Point" , recordPattern2.getPatternType().toString());
-		assertEquals("Name of RecordPattern variable is not null", null , recordPattern2.getPatternName());
 		assertEquals("There should be 2 nested Patterns in Point", 2 , recordPattern2.patterns().size());
 		assertEquals("Type of Nested pattern in Point is not TypePattern",ASTNode.TYPE_PATTERN , recordPattern2.patterns().get(0).getNodeType());
 		assertEquals("Type of Nested pattern in Point is not TypePattern",ASTNode.TYPE_PATTERN , recordPattern2.patterns().get(1).getNodeType());
@@ -563,8 +516,8 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 
 	@SuppressWarnings("rawtypes")
 	public void testRecordPattern004() throws CoreException {
-		if (!isJRE20) {
-			System.err.println("Test "+getName()+" requires a JRE 20");
+		if (!isJRE21) {
+			System.err.println("Test "+getName()+" requires a JRE 21");
 			return;
 		}
 		String contents =  "public class X {\n"
@@ -619,87 +572,37 @@ public class ASTConverter_RecordPattern_Test extends ConverterTestSetup {
 		assertEquals("There should be 1 Record Pattern", ASTNode.RECORD_PATTERN , guardedPattern.getPattern().getNodeType());
 	}
 	public void testIssue882_1() throws Exception {
-		if (!isJRE20) {
-			System.err.println("Test "+getName()+" requires a JRE 20");
+		if (!isJRE21) {
+			System.err.println("Test "+getName()+" requires a JRE 21");
 			return;
 		}
-		try {
-			disablePreview();
-			String contents =  "import java.util.List;\n"
-					+ "public class X {\n"
-					+ "	public static void foo(List<R> rList) {\n"
-					+ "		for(R(Integer abcs):rList) {\n"
-					+ "			System.out.println(abcs);\n"
-					+ "		}\n"
-					+ "	}\n"
-					+ "	record R(int i) {}\n"
-					+ "}";
+		String contents =  "import java.util.List;\n"
+				+ "public class X {\n"
+				+ "	public static void foo(List<R> rList) {\n"
+				+ "		for(R(Integer abcs):rList) {\n"
+				+ "			System.out.println(abcs);\n"
+				+ "		}\n"
+				+ "	}\n"
+				+ "	record R(int i) {}\n"
+				+ "}";
 
 		this.workingCopy = getWorkingCopy("/Converter_19/src/X.java", true/*resolve*/);
-			ASTNode node = buildAST(
+		ASTNode node = buildAST(
 				contents,
 				this.workingCopy,
 				false);
-			assertEquals("Not a compilation unit", ASTNode.COMPILATION_UNIT, node.getNodeType());
-			CompilationUnit compilationUnit = (CompilationUnit) node;
-			assertProblemsSize(compilationUnit, 1, "Record Pattern is a preview feature and disabled by default. Use --enable-preview to enable");
-			node = ((AbstractTypeDeclaration)compilationUnit.types().get(0));
-			assertEquals("Not a Type Declaration", ASTNode.TYPE_DECLARATION, node.getNodeType());
-			TypeDeclaration type = (TypeDeclaration)node;
-			MethodDeclaration[] methods = type.getMethods();
-			assertEquals("Method size incorrect", 1, methods.length);
-			MethodDeclaration printMethod = methods[0];
-			assertEquals("Method name is not foo", "foo", printMethod.getName().toString());
-			List<ASTNode> statements = printMethod.getBody().statements();
-			assertEquals("statement count incorrect", 1, statements.size());
-			Statement stmt = (Statement) statements.get(0);
-			assertEquals("Should be an empty statement", ASTNode.EMPTY_STATEMENT, stmt.getNodeType());
-		} finally {
-			enabledPreview();
-		}
-	}
-	public void testIssue882_2() throws Exception {
-		if (!isJRE20) {
-			System.err.println("Test "+getName()+" requires a JRE 20");
-			return;
-		}
-		try {
-			disablePreview();
-			String contents =  "public class X {\n"
-					+ "	public static void foo(Object o) {\n"
-					+ "		if(o instanceof R(Integer abcs)) {\n"
-					+ "			System.out.println(\"\");\n"
-					+ "		}\n"
-					+ "	}\n"
-					+ "	record R(int i) {}\n"
-					+ "}";
-
-		this.workingCopy = getWorkingCopy("/Converter_19/src/X.java", true/*resolve*/);
-			ASTNode node = buildAST(
-				contents,
-				this.workingCopy,
-				false);
-			assertEquals("Not a compilation unit", ASTNode.COMPILATION_UNIT, node.getNodeType());
-			CompilationUnit compilationUnit = (CompilationUnit) node;
-			assertProblemsSize(compilationUnit, 1, "Record Pattern is a preview feature and disabled by default. Use --enable-preview to enable");
-			node = ((AbstractTypeDeclaration)compilationUnit.types().get(0));
-			assertEquals("Not a Type Declaration", ASTNode.TYPE_DECLARATION, node.getNodeType());
-			TypeDeclaration type = (TypeDeclaration)node;
-			MethodDeclaration[] methods = type.getMethods();
-			assertEquals("Method size incorrect", 1, methods.length);
-			MethodDeclaration printMethod = methods[0];
-			assertEquals("Method name is not foo", "foo", printMethod.getName().toString());
-			List<ASTNode> statements = printMethod.getBody().statements();
-			assertEquals("statement count incorrect", 1, statements.size());
-			Statement stmt = (Statement) statements.get(0);
-			assertEquals("Should be an IF statement", ASTNode.IF_STATEMENT, stmt.getNodeType());
-			IfStatement ifStmt = (IfStatement) stmt;
-			Expression expression = ifStmt.getExpression();
-			assertEquals("Should be an instanceof expression", ASTNode.PATTERN_INSTANCEOF_EXPRESSION, expression.getNodeType());
-			// Doesn't matter what else goes inside the PatternInstanceofExpression, because it's broken code and
-			// nothing is promised
-		} finally {
-			enabledPreview();
-		}
+		assertEquals("Not a compilation unit", ASTNode.COMPILATION_UNIT, node.getNodeType());
+		CompilationUnit compilationUnit = (CompilationUnit) node;
+		node = ((AbstractTypeDeclaration)compilationUnit.types().get(0));
+		assertEquals("Not a Type Declaration", ASTNode.TYPE_DECLARATION, node.getNodeType());
+		TypeDeclaration type = (TypeDeclaration)node;
+		MethodDeclaration[] methods = type.getMethods();
+		assertEquals("Method size incorrect", 1, methods.length);
+		MethodDeclaration printMethod = methods[0];
+		assertEquals("Method name is not foo", "foo", printMethod.getName().toString());
+		List<ASTNode> statements = printMethod.getBody().statements();
+		assertEquals("statement count incorrect", 1, statements.size());
+		Statement stmt = (Statement) statements.get(0);
+		assertNotEquals("Should not be an empty statement", ASTNode.EMPTY_STATEMENT, stmt.getNodeType());
 	}
 }
